# outspoken

./: .dockerignore  .forgectl-ci-fix-prompt.txt  .gitignore  Cargo.toml  Dockerfile  README.md  WORKFLOW.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
Formula/: outspoken.rb
plugin/: .mcp.json  plugin.json
src/: App.tsx  audio.rs  daemon.rs  hotkey_listener.rs  lib.rs  main.rs  models.rs  transcription.rs  useAudioLevel.ts  vad.rs
src-tauri/: Cargo.toml  libaudio_preprocess.rlib  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: active_app.rs  ai.rs  audio.rs  audio_level.rs  audio_preprocess.rs  db.rs  formatting.rs  history.rs  hotkey.rs  lib.rs  main.rs  mcp.rs  models.rs  settings.rs  text_injector.rs  text_insert.rs  text_processing.rs  transcription.rs  tray.rs  vad.rs
src-tauri/tests/: daemon_integration.rs
src/components/: History.tsx  Settings.tsx
src/platform/: linux.rs  macos.rs  mod.rs
tests/: daemon_integration.rs
