[package]
name = "outspoken"
version = "0.1.0"
description = "AI-powered dictation daemon"
authors = ["Outspoken Team"]
edition = "2021"

[lib]
name = "outspoken_lib"
path = "src/lib.rs"

[[bin]]
name = "outspoken"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.13"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
rubato = "0.16"
regex-lite = "0.1"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
arboard = "3"
clap = { version = "4", features = ["derive"] }

[features]
default = []
multilingual = []
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]
