[package]
name = "outspoken"
version = "0.1.0"
description = "AI-powered dictation app"
authors = ["Outspoken Team"]
edition = "2021"

[lib]
name = "outspoken_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.13"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]
