[package]
name = "outspoken"
version = "0.1.0"
description = "AI-powered dictation app"
authors = ["Outspoken Team"]
edition = "2021"

[lib]
name = "outspoken_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "outspoken-app"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "outspoken"
path = "src/bin/outspoken.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }
enigo = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.13"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
rubato = "0.16"
regex-lite = "0.1"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
arboard = "3"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

[features]
default = ["desktop"]
desktop = ["tauri", "tauri-plugin-opener", "tauri-plugin-global-shortcut", "enigo"]
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]
